# urquhart

./: .gitignore  CMakeLists.txt  package.xml
example/: ensure_same_matches.py  ensure_same_poly.py  example.cpp  expected_output.txt  new_ex_out.txt  new_example.cpp  new_nongreedy_out.txt  other_form_example.cpp  out_example.cpp
example/vis/: vis1.py  vis2.py
forests/: coolForest.txt  denseForest.txt  sparseForest.txt  urqForest.txt  veryDenseForest.txt  verySparseForest.txt
include/my_urq/: epic_polygon.hpp  hype_descriptor.hpp  hype_distance.hpp  hype_matching.hpp  hype_observation.hpp  hype_tree.hpp
include/sim/: geometry.hpp  graph_geometry.hpp  logging.hpp  obs_range_help.hpp  parse_config.hpp  path.hpp
include/urquhart/: descriptor.hpp  distance.hpp  hierarchy.hpp  matching.hpp  observation.hpp  polygon.hpp  tree.hpp
launch/: BASELINE.launch  create_forest.launch  exp.launch  global_test.launch  keyframe_test.launch  offline.launch  offlineNoiseTests.launch  online.launch  pipe_test.launch  range_test.launch  sim_path.launch  sk.launch  stab_testing.launch
maps/: coolForest.txt  denseForest.txt  sparseForest.txt  urqForest.txt  veryDenseForest.txt  verySparseForest.txt
run_configs/create_forest/: basic_forest.yaml  big_basic_forest.yaml  dense_forest.yaml  sparse_forest.yaml  very_dense_forest.yaml  very_sparse_forest.yaml
run_configs/experiments/: E-c12.yaml  E-c14c.yaml  E-c22.yaml  E-c23.yaml  E-c24.yaml  E-c31.yaml  E-c33.yaml  E-c34.yaml
run_configs/expr_combos/: E-c11.yaml  E-c13.yaml  E-c15.yaml  E-c16_slow.yaml  E-c21.yaml  E-c32.yaml  E-c34.yaml  E-c41.yaml
run_configs/geoSLAM/: BASELINE.yaml  OLD_big_square.yaml  OLD_config_that_works.yaml  big_square.yaml  circle_edgemap.yaml  config_that_works.yaml  exis_map.yaml  graph_bad_assoc.yaml  greedyBetterThanFull.yaml  keyframe_crash.yaml  stab_test1.yaml  std.yaml  this_is_the_one.yaml  very_close.yaml
run_configs/nonros_robot_sim/: baseline_fig8_config.ini  norad_fig8_config.ini  norad_square_config.ini  rad_square_config.ini
run_configs/offline_expr/: 10Mc-NOISE.yaml  10Mc-all.yaml  10Mc-alt-map.yaml  10Mc-bigalt-map.yaml  10Mc-easy-map.yaml  10dense-diff.yaml  10dense-easy.yaml  10med-diff.yaml  10med-easy.yaml  10sparse-diff.yaml  10sparse-easy.yaml
run_configs/online/: dense-diff.yaml  dense-easy.yaml  med-diff.yaml  sparse-diff.yaml
run_configs/robot_sim/: baseline_fig8_config.ini  norad_fig8_config.ini  rad_circle_config.ini
run_configs/sim_path/: big_obs_range_test.yaml  cool_path.yaml  need_a_win.yaml  obsRadPath.yaml  obs_range_testing.yaml  test_path.yaml
run_configs/slam_profiles/: x11.yaml  x34-dense.yaml  x34-map.yaml  x34.yaml  x54.yaml
run_configs/super_exp/: 1-live.yaml  10-diff.yaml
scripts/: gh_display.py  global_display.py  keyframe_display.py  kf_poly_display.py  live_gh.py  live_global_display.py  live_graph.py  live_keyframe_display.py  live_pc.py  live_truth_display.py  ltogmatch.py  offline_dtu.py  offline_gh_display.py  offline_gh_overlay.py  offline_graph.py  offline_ltogmatch.py  offline_rect_matches.py  ult_live.py  visualize_graph.py
scripts/eval/: avg_density.py  eval_keyframe_accuracy.py  eval_raw_SLAM.py  just_trees_norad.py  make_map_of_trees_norad.py  runtime_eval_SLAM.py
src/: create_logs.cpp  forest_mapper.cpp  graph_builder.cpp  homography.cpp  keyframe_maker.cpp  matching.cpp  obs_range_testing.cpp  path.cpp  playground.cpp  poisson_disk_sampling.cpp  sim_path.cpp  ultimate_path.cpp
src/my_old/: path.cpp  poisson_disk_sampling.cpp
src/newthings/: hype_descriptor.cpp  hype_matching.cpp  hype_observation.cpp  hype_tree.cpp
src/urquhart/: descriptor.cpp  hierarchy.cpp  matching.cpp  observation.cpp  tree.cpp
